# tui_harness

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: screenshot_benchmark.rs
examples/: state_navigation.rs
mcp_server/: README.md  opencode.example.json  tui_qa_server.py
src/: config.rs  lib.rs  main.rs  runner.rs  session.rs  vlm.rs
src/harness/: cli.rs  mod.rs  types.rs
src/snapshot/: backend.rs  mod.rs  pty.rs  types.rs  utils.rs
tests/: snapshot_qa_integration.rs
