[package]
name = "cli-vision"
version = "0.1.0"
edition = "2024"

description = "Cross-platform terminal UI testing with PTY capture and vision model analysis"

[dependencies]
# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Image handling
image = "0.24"
base64 = "0.22"

# Time/date
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Terminal rendering
crossterm = "0.27"
font8x8 = "0.3"
portable-pty = "0.8"
vte = "0.13"

# Async runtime (used by some dependencies)
tokio = { version = "1", features = ["full"] }

# System info
hostname = "0.4"
once_cell = "1.19"

# Unix-specific (conditional)
[target.'cfg(unix)'.dependencies]
nix = "0.26"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
mockito = "1.2"
httpmock = "0.8.2"

[[bench]]
name = "screenshot_benchmark"
path = "benches/screenshot_benchmark.rs"
